# data-science-portfolio

./: .gitignore  README.md  README_EN.md  production-ml-playbook.md
assets/images/: architecture.mmd
cv/: CV_Daniel_Varela_Perez_1P_EN.html  CV_Daniel_Varela_Perez_1P_EN.md  CV_Daniel_Varela_Perez_1P_EN_ATS.md  CV_Daniel_Varela_Perez_1P_ES.html  CV_Daniel_Varela_Perez_1P_ES.md
projects/churn-prediction/: README.md
projects/credit-risk/: CASE_STUDY.md  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  sample_request.json  setup.py
projects/credit-risk/config/: alerts_config.yaml  config.yaml  mlflow_config.yaml
projects/credit-risk/docs/: 01_problem_statement.md  02_kpi_tree.md  03_business_case.md  03_eda_report.md  04_data_contract.md  05_data_sources.md  06_data_quality_report.md  07_feature_catalog.md  09_model_evaluation.md  10_model_card.md  10_monitoring_report.md  11_final_report.md  11_runbook_operativo.md  12_handoff_to_monitoring.md  12_handoff_to_post_analysis.md  13_handoff_to_optimization.md  14_monitoring_runbook.md  15_handoff_to_monitoring.md  F0_checklist_validation.md  F0_problem_statement.md  F1_checklist_validation.md  F1_setup.md  F2_architecture.md  F2_checklist_validation.md  F3_checklist_validation.md  F3_data_quality.md  F4_checklist_validation.md  F4_feature_engineering.md  F5_checklist_validation.md  F5_modeling.md  F6_checklist_validation.md  F6_validation.md  F7_checklist_validation.md  F7_deployment.md  F8_checklist_validation.md  F8_monitoring.md  F9_checklist_validation.md  F9_closure.md  M4_checklist_validation.md  MO_optimization.md  (+4 more)
projects/credit-risk/src/: __init__.py
projects/credit-risk/tests/: __init__.py  conftest.py  test_model.py  test_smoke.py
projects/demand-forecasting/: CASE_STUDY.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api_local.sh  setup.py  test_api.sh
projects/demand-forecasting/config/: alerts_config.yaml  config.yaml  mlflow_config.yaml
projects/demand-forecasting/deployment/: deploy.sh
projects/demand-forecasting/docs/: 00_problem_statement.md  02_design_architecture.md  03_eda_report.md  04_data_contract.md  04_feature_catalog.md  05_data_sources.md  06_data_quality_report.md  09_model_evaluation.md  10_model_card.md  10_monitoring_report.md  11_final_report.md  11_runbook_operativo.md  12_handoff_to_monitoring.md  12_handoff_to_post_analysis.md  14_monitoring_runbook.md  API_DOCUMENTATION.md  API_VALIDATION_GUIDE.md  CHANGELOG.md  DATA_ACCESS.md  DEPLOYMENT_GUIDE.md  DOCKER_TROUBLESHOOTING.md  F0_checklist_validation.md  F1_checklist_validation.md  F1_setup.md  F2_checklist_validation.md  F3_checklist_validation.md  F4_checklist_validation.md  F4_feature_engineering.md  F5_checklist_validation.md  F5_modeling.md  F6_checklist_validation.md  F6_validation.md  F7_checklist_validation.md  F7_deployment.md  F8_checklist_validation.md  F9_checklist_validation.md  INSTALLATION.md  MODEL_CARD.md  PRE_DEPLOYMENT_CHECKLIST.md  VALIDATION_SUMMARY.md  (+4 more)
projects/demand-forecasting/docs/adr/: ADR-001_model_choice.md  ADR-002_serving_strategy.md
projects/demand-forecasting/src/api/: __init__.py  main.py  model_service.py  schemas.py
projects/demand-forecasting/src/features/: __init__.py  build_features.py  calendar_features.py  event_features.py  lag_features.py  price_features.py  rolling_features.py
projects/demand-forecasting/src/monitoring/: __init__.py  alerts.py  drift_detection.py  monitoring_run.py
projects/demand-forecasting/src/visualization/: __init__.py  dashboard.py
projects/demand-forecasting/tests/: README.md  conftest.py  test_api.py  test_feature_pipeline_small.py  test_features.py  test_model.py  test_model_service.py  test_schemas.py  test_smoke.py  test_train_demand_helpers.py  test_train_demand_main.py
projects/diabetes-prediction/: README.md
projects/fraud-detection/: CASE_STUDY.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
projects/fraud-detection/docs/: 03_eda_report.md  04_data_contract.md  05_data_sources.md  06_data_quality_report.md  07_feature_catalog.md  09_model_evaluation.md  10_model_card.md  10_monitoring_report.md  11_final_report.md  11_runbook_operativo.md  12_handoff_to_monitoring.md  12_handoff_to_post_analysis.md  14_monitoring_runbook.md  F0_checklist_validation.md  F0_problem_statement.md  F1_checklist_validation.md  F1_setup.md  F2_checklist_validation.md  F3_checklist_validation.md  F4_checklist_validation.md  F5_checklist_validation.md  F6_checklist_validation.md  F6_validation.md  F7_checklist_validation.md  F7_deployment.md  F8_checklist_validation.md  F9_checklist_validation.md  F9_closure.md  drift_interpretation_guide.md  feature_engineering.md  lessons_learned.md  roi_validation.md
projects/olist-retention/: README.md
projects/powergrid-forecast/: README.md
projects/retail-inventory/: README.md
projects/telco-churn/: README.md
projects/user-score/: Makefile  README.md  pyproject.toml  requirements.txt
projects/user-score/configs/: config.yaml  schema.yaml
projects/user-score/deployment/: Dockerfile  README.md  aws_ecs_task_def.json  aws_eventbridge_scheduler.json  gcp_cloud_run_job.yaml  gcp_cloud_scheduler.yaml
projects/user-score/docs/: 09_model_evaluation.md  10_model_card.md  F0_checklist_validation.md  F1_checklist_validation.md  F1_setup.md  F2_checklist_validation.md  F3_checklist_validation.md  F4_checklist_validation.md  F5_checklist_validation.md  F5_modeling.md  F6_checklist_validation.md  F6_validation.md  F7_checklist_validation.md  F7_deployment.md  F8_checklist_validation.md  F9_checklist_validation.md
projects/user-score/notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_model_validation.ipynb
projects/user-score/reports/: 01_problem_statement.md  02_design_architecture.md  02_model_evaluation.md  03_eda_report.md  (+21 more)
services/: outreach_templates_en.md  outreach_templates_es.md  proposal_template_en.md  propuesta_template_es.md  services_en.md  services_es.md
(+22 files in other folders)
