# ============================================================================
# pyproject.toml - Walmart Demand Forecasting Project Configuration
# ============================================================================
# Configuración moderna de Python para herramientas de desarrollo
#
# Autor: Ing. Daniel Varela Perez
# Email: bedaniele0@gmail.com
# Tel: +52 55 4189 3428
# Metodología: DVP-PRO
# ============================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walmart-demand-forecasting"
version = "1.2.0"
description = "Intelligent demand forecasting system for Walmart using ML and optimization"
readme = "README.md"
authors = [
    {name = "Ing. Daniel Varela Perez", email = "bedaniele0@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "machine-learning",
    "demand-forecasting",
    "time-series",
    "walmart",
    "retail-analytics",
    "inventory-optimization",
    "mlops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/danielvarela/walmart-demand-forecasting"
Documentation = "https://github.com/danielvarela/walmart-demand-forecasting/blob/main/README.md"
Repository = "https://github.com/danielvarela/walmart-demand-forecasting"
Issues = "https://github.com/danielvarela/walmart-demand-forecasting/issues"

[project.scripts]
walmart-train = "src.models.train_demand:main"
walmart-predict = "src.models.predict:main"
walmart-api = "src.api.main:main"
walmart-dashboard = "src.visualization.dashboard:main"
walmart-monitor = "src.monitoring.monitoring_run:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]
mlops = [
    "mlflow>=2.9.0",
    "optuna>=3.4.0",
]
monitoring = [
    "prometheus-client>=0.18.0",
    "evidently>=0.4.0",
]
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "mlflow>=2.9.0",
    "optuna>=3.4.0",
    "prometheus-client>=0.18.0",
    "evidently>=0.4.0",
]

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
  | mlruns
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", "mlruns/*", "*.egg-info/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "features: marks tests for feature engineering",
    "models: marks tests for model training",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/mlruns/*",
    # Módulos interactivos o integraciones que se prueban manualmente/integración
    "src/visualization/*",
    "src/monitoring/*",
    "src/models/evaluate.py",
    "src/models/predict.py",
    "src/models/mlflow_utils.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
exclude = [
    "venv",
    "mlruns",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "lightgbm.*",
    "xgboost.*",
    "mlflow.*",
    "plotly.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "mlruns",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.bandit]
exclude_dirs = ["tests", "venv", "mlruns"]
skips = ["B101", "B601"]

# ============================================================================
# PROJECT METADATA
# ============================================================================

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.csv", "*.txt"]
